--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <input type="text" placeholder="Your Name">
             <input type="email" name="Instagram" id="" placeholder="Your Instagram Id">
             <textarea name="" id="" cols="30" rows="10" placeholder="Write Your Request"></textarea>
-            <input type="button" value="Send" class="contact-button">
+             <a href="https://www.instagram.com/bl_world_tn/" class="btn">Send</a>
         </form>
     </div>
 </section>
