--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
             <a href="#" class="btn">Home</a>
         </div>
     </div>
-</section>
+</section><br><br>
 <!-- MyEdits -->
+<br>
 <section class="MyEdits" id="myedits">
     <div class="heading">
         <h2>MyEdits</h2>
@@ -110,12 +111,12 @@
                 <a href="https://www.youtube.com/@bl_world__4109/featured" target="blank"><button>My other account</button></a></p>
         </div>
         <div class="img-col">
-            <video src="./videos/InShot_20230727_203326719.mp4" height="250px" width="450px" controls autoplay muted looptype=" "></video> 
+            <video src="./videos/InShot_20230727_203326719.mp4" height="250px" width="330px" controls autoplay muted looptype=" "></video> 
         </div>
     </div>
     <div class="row">
         <div class="img-col">
-            <video src="./videos/InShot_20230727_202458451.mp4" height="250px" width="450px" controls autoplay muted looptype=" "></video> 
+            <video src="./videos/InShot_20230727_202458451.mp4" height="250px" width="330px" controls autoplay muted looptype=" "></video> 
         </div>
         <div class="text-col">
             <h2>Anime Edits</h2>
@@ -207,7 +208,8 @@
             <input type="text" placeholder="Your Name">
             <input type="email" name="Instagram" id="" placeholder="Your Instagram Id">
             <textarea name="" id="" cols="30" rows="10" placeholder="Write Your Request"></textarea>
-             <a href="https://www.instagram.com/bl_world_tn/" class="btn">Send</a>
+            <a href="https://www.instagram.com/bl_world_tn/" class="btn">Send</a>
+
         </form>
     </div>
 </section>
